# edge-infer

./: .dockerignore  .gitattributes  .gitignore  BENCHMARKS-TFLM-DRAFT.md  BENCHMARKS.md  CONTRIBUTING.md  Dockerfile.smoke  LICENSE  LICENSE-APACHE  README.md  edge_infer.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  hardware-test-report.yml  model-didnt-compile.yml  op-request.yml
.github/workflows/: ci.yml
examples/cifar10_mps2/: README.md  cifar_cnn.onnx  demo_input.rs  train.py
examples/cifar10_tiny/: README.md  cifar_cnn.onnx  train.py
examples/fashion_mnist/: fashion_cnn.onnx  train.py
examples/iris/: iris_mlp.onnx  train.py
examples/mnist/: gen_test_data.py  mnist_cnn.onnx  mnist_cnn.onnx.data  train.py
examples/vibration_anomaly/: README.md  cwru_bearing_mlp.onnx  demo_input.rs  test_samples.npz  train.py
scripts/: eval_full_mnist.py
