[project]
name = "edge-infer"
version = "0.1.0"
description = "ONNX to Rust no_std inference code generator for microcontrollers"
license = "MIT OR Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "onnx>=1.14",
    "onnxruntime>=1.16",
]

[project.scripts]
edge-infer = "edge_infer:main"

[project.optional-dependencies]
# Only needed to train example models (downloads ~2GB of PyTorch)
train = [
    "torch>=2.0",
    "torchvision>=0.15",
]
